test/bad/automatic/base/compile_time/0017.lat
int main() {
	int x = foo();
	return 0 ;
}

int foo(int y) {
 return y;
}

